# sputnik-classifier

./: .gitignore  LICENSE  README.md  deploy.yaml  docker-compose.yaml  example.env  skaffold.yaml
.github/workflows/: common.yaml  gke.yaml
client/: .editorconfig  .gitignore  Dockerfile  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: ASCIIArt.tsx  Banner.tsx  Error.tsx  Flash.tsx  Form.tsx  Input.tsx  InputBox.tsx  InputJSON.tsx  JSONEditor.tsx  JSONForm.tsx  JSONInput.tsx  JSONUploader.tsx  JSONViewer.tsx  Label.tsx  Loading.tsx  Spacer.tsx  Textarea.tsx
client/src/lib/: colors.ts  json.ts  utils.ts
client/src/services/: api.ts
client/src/views/: InspectView.tsx  UploadView.tsx
k8s/: almaz-production.yaml  almaz.yaml  mir.yaml  mongodb-production.yaml  mongodb.yaml
ms/almaz/: Dockerfile  go.mod  main.go
ms/almaz/handlers/: data.go  login.go
ms/almaz/middleware/: jwtmiddleware.go
ms/almaz/models/: device.go
ms/almaz/repositories/: data_repo.go  user_repo.go
ms/api/: .gitlab-ci.yml  README.md  db.go  entrypoint.sh  go.sum  init.js  init.sql  main.go
ms/api/auth/: auth.go
ms/api/docs/: docs.go  swagger.json  swagger.yaml
ms/api/handlers/: device.go
ms/api/repositories/: device_repo.go
ms/api/services/: data_service.go  device_service.go  user_service.go
ms/gopp/: go.mod  main.go
ms/gopp/datacleaner/: datacleaner.go
ms/mir/: .gitignore  Dockerfile  README.md  clean.py  db.py  error_middleware.py  example.env  log_middleware.py  main.py  openrouter.py  pyproject.toml  rabbitmq.py
ms/mir/src/: clean.py  main.py
ms/pypp/: .gitignore  .pdm-python  Dockerfile  README.md  clean.py  main.py  pyproject.toml
src/mir/: __init__.py  clean.py  converter.py  db.py  dedupe.py  friedman.py  log_middleware.py  lstm.py  main.py  openrouter.py  pyproject.toml  ragas_test.py  results_processor.py  rnn.py  sample.py  sampler.py  svm.py  visualise_results.py
src/mir/machine_learning/: encode.py  load_dataset.py  lstm.py  lstm_model.py  main.py  news_dataset.py  preprocess.py
