[project]
name = "pypp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Samuel Svensson", email = "ss225ze@student.lnu.se"},
    {name = "Andreas Nilsson", email = "an224qi@student.lnu.se"},
]
dependencies = ["nltk>=3.9.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
